[package]
name = "oac-2015-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
miette = {features=["fancy"], version="3.2.0"}