[package]
name = "oac-2015-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.5.4"
lazy_static = "1.4.0"
serde = "1.0.131"
serde_json = "1.0.72"
itertools = "0.10.3"
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
miette = {features=["fancy"], version="3.2.0"}